<resources>
    <string name="app_name">Fe y Alegria</string>
    <string name="valtxcodigo">Ingrese el Código de Docente</string>
    <string name="valtxcontrasena">Ingrese su Contraseña </string>
    <string name="valbtningreso">Ingrese</string>
    <string name="valtxolvidocontrasena">¿Olvido su contraseña?</string>
    <string name="valTitulo">Justificación</string>
    <string name="valTipoFalta">Tipo de Falta</string>
    <string name="valResultTipoFalta">example</string>
    <string name="valFechaFalta">Fecha de Falta</string>
    <string name="valDescripcion">Descripción</string>
    <string name="valAsusnto">Asunto</string>
    <string name="valtbtnEnviar">Enviar</string>
    <string name="valbtnMenu">Volver al Menu</string>
    <string name="valSaludo">Bienvenido Docente</string>
    <string name="valbtnhorarios">Ver Horarios</string>
    <string name="valbtnTardInasis">VER TARDANZAS E INASISTENCIAS</string>
    <string name="valMarcar">Marcar Asistencia</string>
    <string name="valCerrarSesion">Cerrar Sesión</string>
    <string name="valtxtAsistencias">Ver Asistencias</string>
</resources>