<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F0F0F"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="186dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/iconopersona" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/valSaludo"
        android:textColor="#FAFAFA"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="TextView"
        android:textColor="#FAFAFA"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHorarios"
        android:layout_width="245dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="#EFD706"
        android:text="@string/valbtnhorarios"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnTardInasis"
        android:layout_width="245sp"
        android:layout_height="56sp"
        android:layout_marginTop="20dp"
        android:background="#EFD706"
        android:text="@string/valbtnTardInasis"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHorarios"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnMarcarAsis"
        android:layout_width="245sp"
        android:layout_height="56sp"
        android:layout_marginTop="20dp"
        android:background="#EFD706"
        android:text="@string/valMarcar"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTardInasis"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginTop="128dp"
        android:background="#EFD706"
        android:text="@string/valCerrarSesion"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMarcarAsis"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>